--- a/base_di_partenza/assets/css/style.css
+++ b/base_di_partenza/assets/css/style.css
@@ -31,6 +31,13 @@ header {
   box-shadow: 0 3px 3px #444;
   margin-bottom: 1.5em;
   padding: 2em 1.5em;
+  position: fixed;
+  right: 0;
+  left: 0;
+  z-index: 1;
+  height: 200px;
+  margin-left: 15px;
+  margin-right: 15px;
 }
 
 @media screen and (min-width: 800px) {
@@ -94,6 +101,7 @@ main {
   box-shadow: 0 3px 3px #444;
   padding: 2em 1em;
   margin-bottom: 1.5em;
+  margin-top: 200px;
 }
 @media screen and (min-width: 700px) {
   main {
@@ -109,6 +117,9 @@ section {
 }
 
 section h2 {
+  position: absolute;
+  left: 20px;
+  bottom: 29px;
   text-align: center;
   color: #333;
   font-size: 1.4rem;
