--- a/base_di_partenza/assets/css/style.css
+++ b/base_di_partenza/assets/css/style.css
@@ -238,6 +238,17 @@ iframe {
   border-radius: 20px;
 }
 
+#linkTornaSu {
+  background-color: rgb(255, 0, 255);
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  width: 50px;
+  height: 50px;
+  z-index: 900;
+  border-radius: 50px;
+}
+
 @media screen and (min-width: 1200px) {
   iframe,
   section {
